Correcion en index

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Consultar Estado de Envío - PacketWorld</title>
+    <title>Consultar Estado de Envío</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
